application/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: argocd-test
  labels:
    name: argocd-test
