application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-demo-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
