application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-demo-ingress
  namespace: argocd-demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /argocdemo
        pathType: Prefix
        backend:
          service:
            name: argocd-demo
            port:
              number: 80
